ignored vscode folder

--- a/.gitignore
+++ b/.gitignore
@@ -350,12 +350,7 @@ MigrationBackup/
 .ionide/
 
 # VS Code related files
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+.vscode/
 
 # Local History for Visual Studio Code
 .history/
