--- a/PhotoBombCLI/PhotoBombCLI.csproj
+++ b/PhotoBombCLI/PhotoBombCLI.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+    <Content Include="assets\dummy_tag_photo.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content> 
   </ItemGroup>
 
 </Project>
