--- a/PhotoBombCLI/PhotoBombCLI.csproj
+++ b/PhotoBombCLI/PhotoBombCLI.csproj
@@ -1,20 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net5.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
-    <Content Include="assets\dummy_tag_photo.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content> 
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
+		<PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+		<Content Include="assets\dummy_tag_photo.jpg">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="assets\Model\TinyYolo2_model.onnx">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\PhotoBombDetector\PhotoBombDetector.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\PhotoBombDetector\PhotoBombDetector.csproj" />
+	</ItemGroup>
 
 </Project>
